# container-audit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
container_audit/: __init__.py  cli.py  models.py  scanner.py  utils.py
container_audit/checks/: __init__.py  docker.py  kubernetes.py  network.py  secrets.py
container_audit/reporters/: __init__.py  console.py  html_out.py  json_out.py
examples/: sample-report.json
tests/: conftest.py  test_docker.py  test_k8s.py  test_scanner.py  test_secrets.py
