[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "container-audit"
version = "0.1.0"
description = "Lightweight container security auditor for Docker and Kubernetes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "HYMichellexdd", email = "contact@hyichellexdd.dev"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
keywords = ["security", "docker", "kubernetes", "container", "audit", "scanner", "devsecops"]
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
container-audit = "container_audit.cli:main"

[project.urls]
Homepage = "https://github.com/HYMichellelxdd/container-audit"
Repository = "https://github.com/HYMichellelxdd/container-audit"
Issues = "https://github.com/HYMichellelxdd/container-audit/issues"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "W503", "E203"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
